--- a/src/2024.md
+++ b/src/2024.md
@@ -9,6 +9,7 @@
 
 ## Topics
 
-| Issue                                                          | Topics                                                                                                                        |
-|----------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------|
-| [August 2024](./2024-08-31-this-month-in-reactive-graph.md)    | Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System   |
+| Issue                                                                                                | Topics                                                                                                                      |
+|------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
+| [September 2024](https://this-month-in.reactive-graph.io/2024-09-this-month-in-reactive-graph.html)  | Stable rust, Improved CI, Improved CLI, Project Maintenance                                                                 |
+| [August 2024](./2024-08-this-month-in-reactive-graph.md)                                             | Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System |
