Prepare issue for november 2024

--- a/src/2024.md
+++ b/src/2024.md
@@ -9,8 +9,9 @@
 
 ## Topics
 
-| Issue                                                                                               | Topics                                                                                                                      |
-|-----------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
-| [October 2024](https://this-month-in.reactive-graph.io/2024-10-this-month-in-reactive-graph.html)   | Self Updater, Release Process, Nightly Builds, Platform Support, Docker Images, Debian Packages, CLI Instance Management    |
-| [September 2024](https://this-month-in.reactive-graph.io/2024-09-this-month-in-reactive-graph.html) | Stable rust, Improved CI, Improved CLI, Project Maintenance                                                                 |
-| [August 2024](./2024-08-this-month-in-reactive-graph.md)                                            | Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System |
+| Issue                                                       | Topics                                                                                                                      |
+|-------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
+| [November 2024](./2024-11-this-month-in-reactive-graph.md)  |                                                                                                                             |
+| [October 2024](./2024-10-this-month-in-reactive-graph.md)   | Self Updater, Release Process, Nightly Builds, Platform Support, Docker Images, Debian Packages, CLI Instance Management    |
+| [September 2024](./2024-09-this-month-in-reactive-graph.md) | Stable rust, Improved CI, Improved CLI, Project Maintenance                                                                 |
+| [August 2024](./2024-08-this-month-in-reactive-graph.md)    | Manage Type System via Command Line Interface, Java GraphQL Client POC, Specification of the Identity and Permission System |
